# dcode

./: .editorconfig  .gitignore  .goreleaser.yml  .npmignore  ALL_FEATURES_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY_TEXT_GUIDE.md  ENHANCED_UI_FEATURES.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  INTEGRATION_COMPLETE.md  MEDIUM_PRIORITY_COMPLETE.md  Makefile  Makefile.optimize  PHASE1_COMPLETE.md  PHASE2_UPDATE.md  QUICKSTART.md  QUICK_REFERENCE_CARD.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TEXT_COPYING_COMPLETE_GUIDE.md  THEME_SYSTEM.md  TODO.md  TOKEN_USAGE_ALWAYS_VISIBLE.md  TUI_ARCHITECTURE.md  TUI_IMPLEMENTATION_COMPLETE.md  TUI_IMPROVEMENT_PLAN.md  TUI_QUICK_WINS.md  TUI_SUMMARY.md  TUI_VISUAL_EXAMPLES.md  announcement_tip.toml  dcode.yaml.example  demo_ui.sh  go.mod  go.sum  install.js  install.sh  (+2 more)
dcode-rs/app-server/: Cargo.toml  README.md
dcode-rs/app-server-client/: Cargo.toml  README.md
dcode-rs/app-server-client/src/: lib.rs  remote.rs
dcode-rs/app-server-test-client/: Cargo.toml  README.md
dcode-rs/app-server-test-client/src/: lib.rs  main.rs
dcode-rs/app-server/src/: app_server_tracing.rs  bespoke_event_handling.rs  command_exec.rs  config_api.rs  dcode_message_processor.rs  dynamic_tools.rs  external_agent_config_api.rs  filters.rs  fs_api.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  server_request_error.rs  thread_state.rs  thread_status.rs  transport.rs
dcode-rs/app-server/src/dcode_message_processor/: apps_list_helpers.rs  plugin_app_helpers.rs  plugin_mcp_oauth.rs
dcode-rs/app-server/src/message_processor/: tracing_tests.rs
dcode-rs/app-server/tests/common/: Cargo.toml  analytics_server.rs  auth_fixtures.rs  config.rs  lib.rs  mcp_process.rs  models_cache.rs  rollout.rs
dcode-rs/app-server/tests/suite/: auth.rs  conversation_summary.rs  fuzzy_file_search.rs
dcode-rs/arg0/: Cargo.toml
dcode-rs/arg0/src/: lib.rs
dcode-rs/backend-client/: Cargo.toml
dcode-rs/backend-client/src/: client.rs  types.rs
dcode-rs/chatgpt/: Cargo.toml  README.md
dcode-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs  get_task.rs
dcode-rs/chatgpt/tests/suite/: apply_command_e2e.rs
dcode-rs/cli/: Cargo.toml
dcode-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
dcode-rs/cli/src/desktop_app/: mac.rs
dcode-rs/cli/tests/: debug_clear_memories.rs  execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
dcode-rs/cloud-tasks/: Cargo.toml
dcode-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
dcode-rs/cloud-tasks/tests/: env_filter.rs
dcode-rs/config/: Cargo.toml
dcode-rs/config/src/: config_requirements.rs  diagnostics.rs  fingerprint.rs  requirements_exec_policy.rs  state.rs
dcode-rs/core/: Cargo.toml  README.md  gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  prompt.md  prompt_with_apply_patch_instructions.md
dcode-rs/core/src/: analytics_client.rs  analytics_client_tests.rs  api_bridge.rs  api_bridge_tests.rs  apply_patch.rs  arc_monitor.rs  arc_monitor_tests.rs  auth_env_telemetry.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  command_canonicalization.rs  command_canonicalization_tests.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_remote.rs  compact_tests.rs  connectors.rs  connectors_tests.rs  contextual_user_message.rs  contextual_user_message_tests.rs  custom_prompts.rs  dcode.rs  dcode_delegate.rs  dcode_delegate_tests.rs  dcode_tests.rs  dcode_tests_guardian.rs  dcode_thread.rs  default_client_forwarding.rs  env.rs  environment_context.rs  error.rs  error_tests.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_policy.rs  (+68 more)
dcode-rs/core/src/agent/: agent_resolver.rs  control.rs  control_tests.rs  mod.rs  registry.rs  registry_tests.rs  role.rs  role_tests.rs  status.rs
dcode-rs/core/src/apps/: render.rs
dcode-rs/core/src/config/: agent_roles.rs  config_tests.rs  edit.rs  edit_tests.rs  managed_features.rs  mod.rs  network_proxy_spec.rs  permissions.rs  permissions_tests.rs  profile.rs  schema.md  schema.rs  schema_tests.rs  service.rs  service_tests.rs  types.rs
dcode-rs/core/src/config_loader/: README.md  layer_io.rs  macos.rs  mod.rs  tests.rs
dcode-rs/core/src/context_manager/: history.rs  history_tests.rs  mod.rs  normalize.rs  updates.rs
dcode-rs/core/src/dcode/: rollout_reconstruction_tests.rs
dcode-rs/core/src/guardian/: approval_request.rs  mod.rs  prompt.rs  review.rs  review_session.rs  tests.rs
dcode-rs/core/src/instructions/: user_instructions.rs  user_instructions_tests.rs
dcode-rs/core/src/mcp/: auth.rs  mod.rs  mod_tests.rs  skill_dependencies.rs  skill_dependencies_tests.rs
dcode-rs/core/src/memories/: README.md  citations.rs  citations_tests.rs  mod.rs  phase1.rs  phase1_tests.rs  phase2.rs  prompts.rs  (+6 more)
dcode-rs/core/tests/: responses_headers.rs
dcode-rs/exec/: Cargo.toml
dcode-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
dcode-rs/exec/tests/: event_processor_with_json_output.rs
dcode-rs/execpolicy/: Cargo.toml  README.md
dcode-rs/execpolicy/src/: main.rs  parser.rs  policy.rs  rule.rs
dcode-rs/execpolicy/tests/: basic.rs
dcode-rs/features/: Cargo.toml
dcode-rs/features/src/: lib.rs  tests.rs
dcode-rs/mcp-server/: Cargo.toml
dcode-rs/mcp-server/src/: dcode_tool_config.rs  dcode_tool_runner.rs  exec_approval.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs
dcode-rs/sandboxing/: Cargo.toml
dcode-rs/sandboxing/src/: landlock.rs  macos_permissions.rs  macos_permissions_tests.rs  policy_transforms.rs  policy_transforms_tests.rs  seatbelt.rs  seatbelt_permissions.rs  seatbelt_tests.rs
dcode-rs/skills/: Cargo.toml
dcode-rs/skills/src/: lib.rs
dcode-rs/utils/sandbox-summary/: Cargo.toml
(+937 files in other folders)
