[package]
name = "dcode-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dcode_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
dcode-app-server = { workspace = true }
dcode-app-server-protocol = { workspace = true }
dcode-arg0 = { workspace = true }
dcode-core = { workspace = true }
dcode-features = { workspace = true }
dcode-feedback = { workspace = true }
dcode-protocol = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
