[package]
name = "dcode-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dcode_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
dcode-apply-patch = { workspace = true }
dcode-linux-sandbox = { workspace = true }
dcode-shell-escalation = { workspace = true }
dcode-utils-home-dir = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
