[package]
name = "dcode-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dcode-backend-openapi-models = { path = "../dcode-backend-openapi-models" }
dcode-client = { workspace = true }
dcode-protocol = { workspace = true }
dcode-core = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
