[package]
name = "dcode-cloud-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dcode_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dcode-cloud-tasks-client = { path = "../cloud-tasks-client", features = [
    "mock",
    "online",
] }
dcode-client = { workspace = true }
dcode-core = { path = "../core" }
dcode-login = { path = "../login" }
dcode-tui = { path = "../tui" }
dcode-utils-cli = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
supports-color = { workspace = true }

[dependencies.async-trait]
workspace = true

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
