[package]
edition.workspace = true
license.workspace = true
name = "dcode-core"
version.workspace = true

[lib]
doctest = false
name = "dcode_core"
path = "src/lib.rs"

[[bin]]
name = "dcode-write-config-schema"
path = "src/bin/config_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.8.2"
async-channel = { workspace = true }
async-trait = { workspace = true }
askama = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dcode-api = { workspace = true }
dcode-app-server-protocol = { workspace = true }
dcode-apply-patch = { workspace = true }
dcode-async-utils = { workspace = true }
dcode-code-mode = { workspace = true }
dcode-connectors = { workspace = true }
dcode-config = { workspace = true }
dcode-exec-server = { workspace = true }
dcode-features = { workspace = true }
dcode-login = { workspace = true }
dcode-shell-command = { workspace = true }
dcode-skills = { workspace = true }
dcode-execpolicy = { workspace = true }
dcode-file-search = { workspace = true }
dcode-git = { workspace = true }
dcode-hooks = { workspace = true }
dcode-network-proxy = { workspace = true }
dcode-otel = { workspace = true }
dcode-artifacts = { workspace = true }
dcode-protocol = { workspace = true }
dcode-rmcp-client = { workspace = true }
dcode-sandboxing = { workspace = true }
dcode-state = { workspace = true }
dcode-terminal-detection = { workspace = true }
dcode-utils-absolute-path = { workspace = true }
dcode-utils-cache = { workspace = true }
dcode-utils-image = { workspace = true }
dcode-utils-home-dir = { workspace = true }
dcode-utils-pty = { workspace = true }
dcode-utils-readiness = { workspace = true }
dcode-secrets = { workspace = true }
dcode-utils-string = { workspace = true }
dcode-utils-stream-parser = { workspace = true }
dcode-windows-sandbox = { package = "dcode-windows-sandbox", path = "../windows-sandbox-rs" }
csv = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
encoding_rs = { workspace = true }
env-flags = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
libc = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "parsing",
    "local-offset",
    "macros",
] }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
wildmatch = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[target.'cfg(unix)'.dependencies]
dcode-shell-escalation = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
dcode-arg0 = { workspace = true }
dcode-otel = { workspace = true, features = [
    "disable-default-metrics-exporter",
] }
dcode-test-macros = { workspace = true }
dcode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
opentelemetry = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
test-case = "3.3.1"
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
