[package]
name = "dcode-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dcode-exec"
path = "src/main.rs"

[lib]
name = "dcode_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dcode-arg0 = { workspace = true }
dcode-app-server-client = { workspace = true }
dcode-app-server-protocol = { workspace = true }
dcode-cloud-requirements = { workspace = true }
dcode-core = { workspace = true }
dcode-feedback = { workspace = true }
dcode-otel = { workspace = true }
dcode-protocol = { workspace = true }
dcode-utils-absolute-path = { workspace = true }
dcode-utils-cli = { workspace = true }
dcode-utils-elapsed = { workspace = true }
dcode-utils-oss = { workspace = true }
dcode-utils-sandbox-summary = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
dcode-apply-patch = { workspace = true }
dcode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
