[package]
name = "dcode-sandboxing"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dcode_sandboxing"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
dcode-network-proxy = { workspace = true }
dcode-protocol = { workspace = true }
dcode-utils-absolute-path = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
