[package]
edition.workspace = true
license.workspace = true
name = "dcode-skills"
version.workspace = true
build = "build.rs"

[lib]
doctest = false
name = "dcode_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
dcode-utils-absolute-path = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
